src/index.css
:root {
  --ship-radius: 10px;
}

@font-face {
    font-family: "Press Start 2P";
    src: url(/fonts/Press_Start_2P/PressStart2P-Regular.ttf) format("truetype");
}
    
.show-circle-boundary {
    background-color: blue;
    border-radius: 50%;
}

.press-start-2p-regular {
    font-family: "Press Start 2P", system-ui;
    font-weight: 400;
    font-style: normal;
}

.glow {
    filter: drop-shadow(0px 0px 16px white);
}

.rock {
    position:absolute;
}

.rock svg {
    display: block;
}

.rock svg path {
    vector-effect: non-scaling-stroke;
    stroke-width: 1px;
    stroke: white;
        
}

.ship {
    position:absolute;
    width: calc(2 * var(--ship-radius));
    height: calc(2 * var(--ship-radius));
    margin-top: calc(-1 * var(--ship-radius));
    margin-left: calc(-1 * var(--ship-radius));
    fill: white;
}

.ship svg {
    display: block;
}

.gun {
    position: absolute;
    width: 2px;
    height: 2px;
    background-color: red;
    border-radius: 50%;
    margin-left: -1px;
    margin-top: -1px;
}

.bullet {
    position: absolute;
    width: 4px;
    height: 4px;
    background-color: white;
    border-radius: 50%;
    margin-left: -2px;
    margin-top: -2px;
}

.game-screen {
    position: relative;
    width: 90%;
    height: calc( 90vh - 100px);
    top:24px;
    left:5%;
    border: 1px solid black;
    border-image: linear-gradient(to right, #999999 0%, #666666 100%) 1;
    overflow: hidden;
    background: black;
    background-image: url(/images/background.jpg);
}

.background {
    background: black;
    background-image: url(/images/background.jpg);
}

.game-screen__scores {
    display: flex;
    justify-content: center;
    gap: 48px;
}

.game-screen__score {
    color: white;
    text-align: center;
}

.game-screen__damage {
    position: absolute;
    top: 10px;
    right: 10px;
    color: white;
    display: none;
}

.heading {
    text-align: center  ;
    color: white; 
}

.gameover-end {
    position: relative;
    height: 100%;
    border: 16px solid white;
    border-radius: 16px;
    transform: rotate(-26deg);
}

.start-screen {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 32px;
    color: white;
}

.start-screen__instructions {
    display: flex;
    flex-direction: column;
    gap: 16px;
    font-size: 12px;
}

.start-screen__instruction-row {
    display: flex;
    gap: 24px;
    align-items: center;
}

.start-screen__key {
    display: inline-block;
    min-width: 48px;
    text-align: center;
    padding: 4px 8px;
    border: 1px solid white;
    border-radius: 4px;
}

.start-screen__button {
    padding: 12px 48px;
    font-size: 16px;
    font-family: "Press Start 2P", system-ui;
    cursor: pointer;
    border-radius: 24px;
    border: 2px white solid;
    background: black;
    color: white;
}

.start-screen__button:hover {
    background: white;
    color: black;
}

